# fingerprint_system

./: .gitignore  config.py  main.py  pyproject.toml
.claude/: settings.local.json
core/: feature_extraction.py  fingerprint_sensor.py  gpio_controller.py  preprocessing.py
database/: db_manager.py
models/: ann_model.py  onnx_inference.py  tf_inference.py
utils/: logger.py
