[project]
name = "fingerprint-system"
version = "1.0.0"
description = "Fingerprint Recognition System for Raspberry Pi"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "numpy==1.24.3",
    "scikit-image==0.21.0",
    "scikit-learn==1.3.0",
    "pyfingerprint==1.5",
    "flask==2.3.2",
    "pillow==10.0.0",
    "tensorflow",
    "pyserial==3.5",
    "fake-rpi==0.7.1"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
